# agent-task-scheduler

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  README_EN.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
docs/: global-scheduler-v1-contract.md  global-scheduler-v1-dependency-migration.md  global-scheduler-v1-errors.md
evals/: README.md  global_scheduler_skill_cases.jsonl
schemas/: config.schema.json  legacy-state-map.schema.json  publish-input.schema.json  receipt.schema.json  state.schema.json
scripts/: verify_offline_build.sh
skills/codex-team/: README.md  SKILL.md
skills/codex-team/assets/: 任务计划书模板.md  (+8 more)
skills/global-scheduler/: SKILL.md
src/agent_task_scheduler/: __init__.py  lease_guard.py
tests/codex_team/: test_cli.py  test_update.py  test_user_installer.py
tests/core/: test_scheduler_core.py
tests/history/: test_publish_history.py
tests/lease_guard/: test_lease_guard.py
tests/lifecycle/: test_task_state_transitions.py
tests/linux/: test_clean_install_isolation.py
tests/locking/: test_state_lock.py
tests/migration/: test_state_migration.py
tests/plugin/: test_plugin_manifest.py
tests/project_context/: test_project_context.py
tests/publish/: test_publish_cli.py  test_publish_service.py
tests/skill/: test_install_skill.py
tests/windows/: validate_windows.py
tmp/global_scheduler_b3_linux_validation/: REPORT.md
tmp/global_scheduler_b_history_events/: REPORT.md
tmp/global_scheduler_c3_windows_validation/: REPORT.md
tmp/global_scheduler_c_windows/: REPORT.md
(+77 files in other folders)
