[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-task-scheduler"
version = "0.3.8"
description = "Project-scoped task scheduler core"
requires-python = ">=3.11"

[dependency-groups]
test = [
  "jsonschema>=4.23.0",
  "pytest>=8.3.0",
]

[project.scripts]
scheduler = "agent_task_scheduler.cli.main:main"
codex-team = "agent_task_scheduler.codex_team.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_task_scheduler"]

[tool.hatch.build.targets.wheel.force-include]
"skills/codex-team" = "agent_task_scheduler/codex_team/assets/codex-team"

[tool.ruff]
target-version = "py311"
